<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Text -->
    <string name="hello">“Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod”</string>
    <string name="app_name">Squeaky Clean</string>
    <string name="newcust_txt">“Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod”</string>
    
    <!-- Colors -->
    <color name="bg_colour">#E8DEC3</color>
    <color name="btn_txt_colour">#A89C83</color>
    <color name="txt_colour">#6B5F52</color>
    <color name="form_txt">#6B6152</color>
    
    <!-- Buttons -->
    <string name="new_customer">NEW CUSTOMER</string>
    <string name="current_customer">CURRENT CUSTOMER</string>
    <string name="cnt">CONTINUE</string>
    
    <!-- Form Fields -->
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="number">MOBILE NUMBER</string>
    <string name="license">LICENSE PLATE</string>
    
    
    <!-- List -->
    <string name="garage_locations">GARAGE LOCATION</string>
    <string-array name="garage_locations_array">
        <item>St Pauls Bay</item>
        <item>Sliema</item>
        <item>Mosta</item>
        <item>Mtarfa</item>
    </string-array>

    <!-- the theme applied to the application or activity -->
    <style name="actionbarTheme" parent="@android:style/Theme.Holo">
    	<item name="android:actionBarStyle">@style/MyActionBar</item>
    </style>
    
    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
    	<item name="android:background">#A63F38</item>
		<item name="android:displayOptions">useLogo|showHome</item>
	</style>
        

</resources>