<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colour"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/usr_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/usr_surname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/usr_number"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/number" />

    <EditText
        android:id="@+id/usr_license"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/license" />

    <EditText
        android:id="@+id/usr_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <Spinner
        android:id="@+id/usr_garage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:prompt="@string/garage_locations" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/nwusr_continue"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/cnt" />

</LinearLayout>