<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_colour" >
    
    <Button
        android:id="@+id/currentCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="200dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/custom_btn"
        android:text="@string/current_customer"
        android:textColor="@color/btn_txt_colour"
        android:textSize="27dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="200dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/custom_btn"
        android:text="@string/new_customer"
        android:textColor="@color/btn_txt_colour"
        android:textSize="27dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/logo_main" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="539dp"
        android:layout_height="wrap_content"
    	android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="610dp"
        android:layout_marginTop="217dp"
        android:text="@string/hello"
        android:textColor="@color/txt_colour"
        android:textStyle="italic"
        android:textSize="22dp" />

</FrameLayout>